discussion/kv_engine/162392/162392_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45066: Remove support for "default bucket"

All connections needs to authenticate to the server and
select a bucket (unless a bucket exists with the same
name as the authenticated user)

Change-Id: I9b441208139e4bfbcdfee80fdd6c672f6f08e4c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-09-29 07:19:50.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-29 07:38:03.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15369/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12943/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12943/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12943/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2574/ : FAILURE

Undefined Sanitizer: kv_engine/rbac/privilege_database.cc:569:20: runtime error: member access within null pointer of type "cb::rbac::PrivilegeDatabase" ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2574/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34490/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40536/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11733/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13699/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2608/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14817/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22831/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
